# tests-cmake

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  libtest.c
tests/: CMakeLists.txt  test.c
